// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch KILTs while receiver can not handle them > V4 LIVE > V4 LIVE: Switch on native chain: "assetSwitchPool1" 1`] = `
[
  {
    "data": {
      "amount": 1000000000000000,
      "from": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
      "to": {
        "V4": {
          "interior": {
            "X1": [
              {
                "AccountId32": {
                  "id": "(hash)",
                  "network": null,
                },
              },
            ],
          },
          "parents": 0,
        },
      },
    },
    "method": "LocalToRemoteSwitchExecuted",
    "section": "assetSwitchPool1",
  },
]
`;

exports[`Switch KILTs while receiver can not handle them > V4 LIVE > V4 LIVE: Switch on receiver chain: {"section":"messageQueue","method":"Processed"} 1`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": "(rounded 2100)",
      },
      "success": false,
      "weightUsed": {
        "proofSize": "(rounded 24000)",
        "refTime": "(rounded 1500000000)",
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`Switch KILTs while receiver can not handle them > V4 LIVE > assetSwitchPool1 Finalization V4 LIVE 1`] = `
[
  {
    "data": {
      "amount": 1000000000000000,
      "from": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
      "to": {
        "V4": {
          "interior": {
            "X1": [
              {
                "AccountId32": {
                  "id": "(hash)",
                  "network": null,
                },
              },
            ],
          },
          "parents": 0,
        },
      },
    },
    "method": "LocalToRemoteSwitchReverted",
    "section": "assetSwitchPool1",
  },
]
`;
